--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,139 @@
-# Core dependencies
-torch>=2.0.0
-numpy>=1.21.0
-pandas>=1.3.0
-tqdm>=4.62.0
-psutil>=5.9.0
-gpustat>=1.0.0
-
-# HuggingFace ecosystem
-transformers>=4.30.0
-huggingface-hub>=0.16.0
-peft>=0.5.0
-accelerate>=0.20.0
-safetensors>=0.3.0
-
-# Logging and utilities
-logging
-dataclasses
-pathlib
-
-# Optional for visualization
-matplotlib>=3.5.0
-seaborn>=0.12.0
-
-# Optional for advanced features
-h5py>=3.7.0  # For HDF5 storage
-scikit-learn>=1.0.0  # For additional analysis
+accelerate==1.12.0
+aiofiles==23.2.1
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.4.0
+asttokens==3.0.0
+bitsandbytes==0.49.1
+blessed==1.27.0
+Bottleneck==1.4.2
+certifi==2026.1.4
+click==8.3.1
+comm==0.2.3
+contourpy==1.3.2
+cuda-bindings==13.0.3
+cuda-pathfinder==1.2.2
+cycler==0.12.1
+debugpy==1.8.17
+decorator==5.2.1
+einops==0.6.1
+einops-exts==0.0.4
+exceptiongroup==1.2.2
+executing==2.2.1
+ffmpy==0.4.0
+filelock==3.20.0
+fonttools==4.61.1
+fsspec==2024.9.0
+gpustat==1.1.1
+h11==0.16.0
+h5py==3.15.1
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface_hub==1.3.5
+idna==3.11
+importlib_metadata==8.7.0
+importlib_resources==6.4.5
+ipykernel==6.30.1
+ipython==8.37.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.3
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+kiwisolver==1.4.9
+latex2mathml==3.77.0
+markdown-it-py==3.0.0
+markdown2==2.5.0
+MarkupSafe==2.1.5
+matplotlib==3.10.8
+matplotlib-inline==0.2.1
+mdurl==0.1.2
+mkl_fft==2.1.1
+mkl_random==1.3.0
+mkl-service==2.5.2
+mpmath==1.3.0
+nest_asyncio==1.6.0
+networkx==3.4.2
+numexpr==2.14.1
+numpy==2.2.5
+nvidia-cublas==13.1.0.3
+nvidia-cuda-cupti==13.0.85
+nvidia-cuda-nvrtc==13.0.88
+nvidia-cuda-runtime==13.0.96
+nvidia-cudnn-cu13==9.15.1.9
+nvidia-cufft==12.0.0.61
+nvidia-cufile==1.15.1.6
+nvidia-curand==10.4.0.35
+nvidia-cusolver==12.0.4.66
+nvidia-cusparse==12.6.3.3
+nvidia-cusparselt-cu13==0.8.0
+nvidia-ml-py==13.590.48
+nvidia-nccl-cu13==2.28.9
+nvidia-nvjitlink==13.0.88
+nvidia-nvshmem-cu13==3.4.5
+nvidia-nvtx==13.0.85
+orjson==3.10.7
+packaging==26.0
+pandas==2.3.3
+parso==0.8.5
+peft==0.18.1
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==12.0.0
+pip==25.3
+platformdirs==4.4.0
+powerlaw==2.0.0
+prompt_toolkit==3.0.52
+psutil==7.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pydantic==2.9.1
+pydantic_core==2.23.3
+pydub==0.25.1
+Pygments==2.18.0
+pyparsing==3.3.2
+python-dateutil==2.9.0.post0
+python-multipart==0.0.9
+pytz==2025.2
+PyYAML==6.0.3
+pyzmq==27.1.0
+regex==2024.9.11
+rich==13.8.1
+ruff==0.6.5
+safetensors==0.7.0
+scikit-learn==1.7.2
+scipy==1.15.3
+seaborn==0.13.2
+semantic-version==2.10.0
+sentencepiece==0.1.99
+setuptools==78.1.1
+shellingham==1.5.4
+shortuuid==1.0.13
+six==1.17.0
+sniffio==1.3.1
+stack_data==0.6.3
+starlette==0.38.5
+svgwrite==1.4.3
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.22.2
+tomlkit==0.12.0
+torch==2.10.0+cu130
+torchvision==0.25.0+cu130
+tornado==6.5.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==5.0.0
+triton==3.6.0
+typer==0.12.5
+typer-slim==0.21.1
+typing_extensions==4.15.0
+tzdata==2025.3
+uvicorn==0.30.6
+wavedrom==2.0.3.post3
+wcwidth==0.2.14
+websockets==11.0.3
+weightwatcher==0.7.6
+wheel==0.45.1
+zipp==3.23.0
